improve: implementar secao portfolio

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -2,3 +2,4 @@
 @import "./modules/hero.scss";
 @import "./modules/services.scss";
 @import "./modules/number.scss";
+@import "./modules/portfolio.scss";
