--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -3,3 +3,4 @@
 @import "./modules/services.scss";
 @import "./modules/number.scss";
 @import "./modules/portfolio.scss";
+@import "./modules/testimonial.scss";
