improve: implementar footer

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -4,3 +4,5 @@
 @import "./modules/number.scss";
 @import "./modules/portfolio.scss";
 @import "./modules/testimonial.scss";
+@import "./modules/subscribe.scss";
+@import "./modules/footer.scss";
