--- a/css/sass/modules/general.scss
+++ b/css/sass/modules/general.scss
@@ -18,6 +18,11 @@ button {
   cursor: pointer;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .container {
   max-width: 1222px;
   margin: 0 auto;
@@ -28,6 +33,7 @@ button {
 .button-outline {
   border: 1px solid #20b15a;
   border-radius: 10px;
+  padding: 10px 15px;
   &:hover {
     background: rgb(32, 177, 90, 0.7);
     color: #ffffff !important;
@@ -38,9 +44,16 @@ button {
   background: #20b15a;
   border-radius: 10px;
   border: 1px solid #20b15a;
+  padding: 10px 15px;
   text-transform: capitalize;
   color: #ffffff;
   &:hover {
     background: rgb(32, 177, 90, 0.7);
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    padding: 0 15px;
   }
 }
