--- a/css/sass/modules/portfolio.scss
+++ b/css/sass/modules/portfolio.scss
@@ -3,7 +3,7 @@
   .container {
     padding: 67px 0;
     header {
-      margin-bottom: 40px;
+      margin-bottom: 73px;
       h1 {
         font-size: 1.25em;
         font-weight: 500;
@@ -12,8 +12,6 @@
         color: #20b15a;
       }
       h2 {
-        max-width: 495px;
-        max-height: 90px;
         font-weight: 600;
         font-size: 1.875em;
         color: #000000;
@@ -24,28 +22,34 @@
       flex-wrap: wrap;
       .portfolio-column-1 {
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-right: 95px;
         .portfolio-item:nth-child(1) {
-          width: 561px;
-          height: 496.36px;
+          max-width: 561px;
+          max-height: 496.36px;
           margin-bottom: 98.64px;
         }
         .portfolio-item:nth-child(2) {
-          width: 561px;
-          height: 677.02px;
+          max-width: 561px;
+          max-height: 677.02px;
         }
       }
       .portfolio-column-2 {
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         .portfolio-item:nth-child(1) {
-          width: 561.15px;
-          height: 675.07px;
+          max-width: 561px;
+          max-height: 675.07px;
           margin-bottom: 95.93px;
         }
 
         .portfolio-item:nth-child(2) {
-          width: 554px;
-          height: 504.52px;
+          max-width: 561px;
+          max-height: 504.52px;
         }
       }
       .portfolio-item {
@@ -64,5 +68,22 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .section-portfolio .container {
+    padding: 67px 15px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section-portfolio .container .portfolio .portfolio-column-1 {
+    margin-right: 0;
+    flex: 1 1 500px;
+    margin-bottom: 98.64px;
+  }
+  .section-portfolio .container .portfolio .portfolio-column-2 {
+    flex: 1 1 500px;
   }
 }
