--- a/css/sass/modules/testimonial.scss
+++ b/css/sass/modules/testimonial.scss
@@ -28,14 +28,15 @@
         justify-content: flex-end;
         .return,
         .advance {
-          align-self: flex-start;
-          min-width: 80px;
-          min-height: 80px;
+          max-width: 80px;
+          max-height: 80px;
           border-radius: 50%;
           padding: 20px 30px;
+          display: flex;
           img {
-            min-width: 14.36px;
-            min-height: 24.94px;
+            align-self: center;
+            max-width: 15px;
+            max-height: 25px;
           }
         }
         .return {
