--- a/css/sass/modules/subscribe.scss
+++ b/css/sass/modules/subscribe.scss
@@ -25,33 +25,58 @@
     .input-container {
       position: relative;
       display: flex;
-      align-items: center;
-      margin: 0 322px;
-      input {
-        border-radius: 14px;
-        border: 1px solid #000000;
-        padding: 20px 16px;
-        min-width: 596px;
-        min-height: 62px;
-        color: #8b8b8b;
-        width: 100%;
+      justify-content: center;
+    }
+    input {
+      border-radius: 14px;
+      border: 1px solid #000000;
+      padding: 20px 16px;
+      color: #8b8b8b;
+      width: 100%;
+    }
+    button {
+      position: absolute;
+      right: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+      padding: 8.11px 24.32px;
+      color: #ffffff;
+      background: #f55f1d;
+      border-radius: 14px;
+      border: 1px solid #f55f1d;
+      font-weight: 500;
+      min-height: 52.7px;
+      min-width: 130.65px;
+      &:hover {
+        opacity: 0.7;
       }
-      button {
-        position: absolute;
-        right: 5px;
-        padding: 8.11px 24.32px;
-        color: #ffffff;
-        background: #f55f1d;
-        border-radius: 14px;
-        border: 1px solid #f55f1d;
-        font-weight: 500;
-        min-height: 52.7px;
-        min-width: 130.65px;
-        cursor: pointer;
-        &:hover {
-          opacity: 0.7;
-        }
-      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .section-subscribe .input-container {
+    padding: 0 35px;
+    button {
+      right: 40px;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-subscribe .input-container {
+    padding: 0 170px;
+    button {
+      right: 175px;
+    }
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section-subscribe .input-container {
+    padding: 0 250px;
+    button {
+      right: 255px;
     }
   }
 }
