--- a/css/style.css
+++ b/css/style.css
@@ -456,8 +456,6 @@ img {
   color: #20b15a;
 }
 .section-testimonial .container header h2 {
-  min-width: 495px;
-  min-height: 90px;
   font-weight: 600;
   font-size: 1.875em;
   color: #000000;
@@ -524,6 +522,11 @@ img {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 1200px) {
+  .section-testimonial .container {
+    padding: 67px 15px;
+  }
+}
 .section-subscribe {
   background: #ffffff;
   padding: 91px 0 137px 0;
@@ -553,21 +556,20 @@ img {
 .section-subscribe .container .input-container {
   position: relative;
   display: flex;
-  align-items: center;
-  margin: 0 322px;
+  justify-content: center;
 }
-.section-subscribe .container .input-container input {
+.section-subscribe .container input {
   border-radius: 14px;
   border: 1px solid #000000;
   padding: 20px 16px;
-  min-width: 596px;
-  min-height: 62px;
   color: #8b8b8b;
   width: 100%;
 }
-.section-subscribe .container .input-container button {
+.section-subscribe .container button {
   position: absolute;
   right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
   padding: 8.11px 24.32px;
   color: #ffffff;
   background: #f55f1d;
@@ -576,12 +578,35 @@ img {
   font-weight: 500;
   min-height: 52.7px;
   min-width: 130.65px;
-  cursor: pointer;
 }
-.section-subscribe .container .input-container button:hover {
+.section-subscribe .container button:hover {
   opacity: 0.7;
 }
 
+@media screen and (max-width: 1024px) {
+  .section-subscribe .input-container {
+    padding: 0 35px;
+  }
+  .section-subscribe .input-container button {
+    right: 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .section-subscribe .input-container {
+    padding: 0 170px;
+  }
+  .section-subscribe .input-container button {
+    right: 175px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .section-subscribe .input-container {
+    padding: 0 250px;
+  }
+  .section-subscribe .input-container button {
+    right: 255px;
+  }
+}
 footer {
   background: #00ca72;
 }
@@ -597,7 +622,7 @@ footer .container .footer {
   flex-wrap: wrap;
 }
 footer .container .footer .footer-column-1 {
-  flex: 2;
+  flex: 2 1 400px;
 }
 footer .container .footer .footer-column-1 h1 {
   margin-left: 6px;
@@ -630,7 +655,7 @@ footer .container .footer .footer-column-1 .social-media span img {
 }
 footer .container .footer .footer-column-2,
 footer .container .footer .footer-column-3 {
-  flex: 1;
+  flex: 1 1 150px;
   text-transform: capitalize;
 }
 footer .container .footer .footer-column-2 h2,
@@ -654,6 +679,12 @@ footer .container .copyright {
   font-size: 1.25em;
   font-weight: 500;
   margin-bottom: 29px;
+}
+
+@media screen and (max-width: 768px) {
+  footer .footer-column-1 {
+    margin-bottom: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
