--- a/css/sass/modules/hero.scss
+++ b/css/sass/modules/hero.scss
@@ -206,3 +206,18 @@
     }
   }
 }
+
+@media screen and (max-width: 425px) {
+  .section-hero .banner-hero .text-hero {
+    h1 {
+      font-size: 2.125em;
+    }
+    p {
+      font-size: 1em;
+    }
+    button {
+      padding: 15px 20px;
+      font-size: 1em;
+    }
+  }
+}
