--- a/css/sass/modules/services.scss
+++ b/css/sass/modules/services.scss
@@ -2,8 +2,7 @@
   background: #ffffff;
   .container {
     flex-direction: column;
-    padding-top: 67px;
-    padding-bottom: 67px;
+    padding: 67px 0 67px 0;
     header {
       position: relative;
       margin-bottom: 40px;
@@ -51,6 +50,8 @@
           text-transform: capitalize;
           color: #000000;
           display: flex;
+          max-width: 159px;
+          max-height: 554px;
           &::after {
             content: "";
             background: url("/img/icon/arrow-right.png");
@@ -60,11 +61,25 @@
             height: 14px;
             align-self: center;
           }
+          &:hover {
+            background: #f55f1d;
+            border-radius: 10px;
+          }
           a {
             padding-right: 10px;
+            color: #000000;
+            &:hover {
+              color: white;
+            }
           }
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .section-services .container {
+    padding: 67px 15px 67px 15px;
   }
 }
