--- a/css/sass/modules/testimonial.scss
+++ b/css/sass/modules/testimonial.scss
@@ -1,6 +1,8 @@
 .section-testimonial {
   background: #ffffff;
-  padding: 122px 0;
+  padding: 122px 0 300px 0;
+  overflow: hidden;
+  position: relative;
   .container {
     flex-direction: column;
     padding: 67px 0;
@@ -38,6 +40,7 @@
           }
         }
         .return {
+          background: transparent;
           border: 1px solid #000000;
           margin-right: 21px;
         }
@@ -47,37 +50,44 @@
         }
       }
     }
-    .testimonial {
-      display: flex;
-      flex-wrap: wrap;
-      .testimonial-card {
-        flex: 1;
-        padding: 40px;
-        min-width: 470px;
-        min-height: 260px;
-        border-radius: 0 0 20px 20px;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-        margin-right: 45px;
+  }
+  .testimonial {
+    position: absolute;
+    right: 0;
+    left: 124px;
+    top: 400px;
+    overflow-y: hidden;
+    display: flex;
+    max-width: 1316px;
+    padding: 0 0 10px 5px;
+    margin: 0 auto;
+    .testimonial-card {
+      padding: 40px;
+      margin-bottom: 10px;
+      min-width: 470px;
+      min-height: 260px;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+      margin-right: 45px;
+      p {
+        font-size: 1.125em;
+        margin-bottom: 20px;
+      }
+      .avatar {
+        display: flex;
+        img {
+          border-radius: 50%;
+          box-shadow: 0 4px 14px rgba(36, 39, 41, 0.1);
+          margin-right: 10px;
+        }
+        h3 {
+          font-size: 1.25em;
+          font-weight: 600;
+          color: #000000;
+        }
         p {
           font-size: 1.125em;
-          margin-bottom: 20px;
-        }
-        .avatar {
-          display: flex;
-          img {
-            border-radius: 50%;
-            box-shadow: 0 4px 14px rgba(36, 39, 41, 0.1);
-            margin-right: 10px;
-          }
-          h3 {
-            font-size: 1.25em;
-            font-weight: 600;
-            color: #000000;
-          }
-          p {
-            font-size: 1.125em;
-            margin-bottom: 0;
-          }
+          margin-bottom: 0;
         }
       }
     }
@@ -87,5 +97,11 @@
 @media screen and (max-width: 1200px) {
   .section-testimonial .container {
     padding: 67px 15px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .section-testimonial .testimonial {
+    left: 15px;
   }
 }
